fixed the overflow issues

--- a/index.css
+++ b/index.css
@@ -41,6 +41,7 @@ body {
     background-color: var(--background);
     color: var(--foreground);
     overflow-x: clip;
+    width: 100vw;
 }
 
 header {
@@ -48,6 +49,7 @@ header {
     justify-content: space-between;
     padding: 1.5rem 6vw;
     overflow-x: clip;
+    position: relative;
 }
 .logo {
     font-weight: bold;
@@ -107,23 +109,44 @@ nav a:hover::after {
     width: .5rem;
 }
 
+/*.hamburger-menu {*/
+/*    position: absolute;*/
+/*    top: 4.5rem;*/
+/*    left: 150%;*/
+/*    transform: translateX(-50%);*/
+/*    height: 100%;*/
+/*    width: calc(100% - 6vw);*/
+/*    z-index: 5;*/
+/*    background: var(--background);*/
+/*    border: 1px solid rgba(255, 255, 255, 0.2);*/
+/*    border-radius: 2rem;*/
+/*    transition: all 0.3s ease-in-out ;*/
+/*}*/
+
+/*.hamburger-menu.active {*/
+/*    left: 50%;*/
+/*}*/
+
+
 .hamburger-menu {
     position: absolute;
     top: 4.5rem;
-    left: 150%;
-    transform: translateX(-50%);
+    left: 0;
+    transform: translateX(100%);
     height: 100%;
-    width: calc(100% - 6vw);
+    width: 100%;
     z-index: 5;
     background: var(--background);
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 2rem;
-    transition: all 0.3s ease-in-out ;
+    transition: transform 0.3s ease-in-out;
 }
 
 .hamburger-menu.active {
-    left: 50%;
+    transform: translateX(0);
 }
+
+
 
 .hamburger-nav {
     display: grid;
